@@ -1,0 +1,6 @@
+#ifndef _WATCH_H_
+#define _WATCH_H_
+
+void watch_loop(void);
+
+#endif
