@@ -1,3 +1,7 @@
+2015-05-12  François  <francois@dechelle.net>
+
+	* added watch daemon using dbus
+
 2015-04-17  François  <francois@dechelle.net>
 
 	* reimplemented daemon server part using GIO, in order to support dbus signals
